# python-socketio

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.md  MANIFEST.in  README.md  README.rst  SECURITY.md  coverage.xml  import socket  def ip_adresi_ogren():     hostname = socket.gethostname()     ip_adresi = socket.gethostbyname(hostname)     print(f"Bu cihazın IP adresi: {ip_adresi}")  ip_adresi_ogren()  problem_description.md  pyproject.toml  setup.cfg  setup.py  solution.patch  test.patch  test.sh  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: publish.yaml  tests.yml
docs/: Makefile  api.rst  api_client.rst  api_manager.rst  api_middleware.rst  api_namespace.rst  api_server.rst  api_simpleclient.rst  client.rst  conf.py  deployment.rst  guide.rst  index.rst  intro.rst  make.bat  server.rst
docs/_static/: index.html
example/: app.py  requirements.txt
example/templates/: index.html
examples/: README.rst  app.py  latency.py
examples/aiohttp/: app.html  app.py
examples/asgi/: README.rst  app.py  latency.py  requirements.txt
examples/client/: README.rst
examples/client/async/: README.rst  fiddle_client.py  latency_client.py
examples/client/asyncio/: README.rst  fiddle_client.py  latency_client.py
examples/client/javascript/: README.md  fiddle-client.js  fiddle_client.js  latency_client.js  package-lock.json  package.json
examples/client/sync/: README.rst  fiddle_client.py  latency_client.py
examples/client/threads/: README.rst  fiddle_client.py  latency_client.py
examples/django_chat/: db.sqlite3  manage.py  readme.md  requirement.txt
examples/django_chat/chat/: sockets.py  urls.py  views.py
examples/django_chat/django_chat/: settings.py  urls.py  wsgi.py
examples/django_chat/geventwebsocket/: __init__.py  handler.py  logging.py  resource.py  utf8validator.py  websocket.py
examples/django_chat/sdjango/: __init__.py  sd_manager.py  sd_middleware.py
examples/flask_chat/: latency.py  requirements.txt
examples/flask_chat/templates/: index.html  latency.html
examples/sanic/: README.rst  app.html  app.py  index.html  latency.html  latency.py  nats-app.py  nats.html
examples/server/: README.rst
examples/server/aiohttp/: README.rst  (+5 more)
examples/simple-client/: README.rst
examples/tornado/: app.py  latency.py  requirements.txt
examples/wsgi/: README.rst  requirements.txt
new_tests/: test_message_history.py
socketio/: __init__.py  asgi.py  asyncio_aiopika_manager.py  asyncio_client.py  asyncio_manager.py  asyncio_namespace.py  asyncio_pubsub_aiopika_manager.py  asyncio_pubsub_manager.py  asyncio_redis_manager.py  asyncio_server.py  asyncio_taskqueue_aiopika_manager.py  asyncio_taskqueue_manager.py  base_manager.py  client.py  exceptions.py  interceptor.py  kafka_manager.py  kombu_manager.py  middleware.py  namespace.py  packet.py  pubsub_manager.py  redis_manager.py  server.py  tornado.py  util.py  uwsgi_manager.py  zmq_manager.py
src/fastsio/: __init__.py  admin.py  asgi.py  async_aiopika_manager.py  async_client.py  async_manager.py  async_namespace.py  async_pubsub_manager.py  async_server.py  async_simple_client.py  base_client.py  base_namespace.py  base_server.py  client.py  exceptions.py  middleware.py  msgpack_packet.py  router.py  server.py  simple_client.py  tornado.py  types.py  zmq_manager.py
src/socketio/: __init__.py  admin.py  asgi.py  async_admin.py  async_aiopika_manager.py  async_client.py  async_manager.py  async_namespace.py  async_pubsub_manager.py  async_redis_manager.py  async_server.py  async_simple_client.py  asyncio_admin.py  asyncio_aiopika_manager.py  asyncio_client.py  asyncio_manager.py  asyncio_namespace.py  asyncio_pubsub_manager.py  asyncio_redis_manager.py  asyncio_server.py  asyncio_simple_client.py  base_client.py  base_manager.py  base_namespace.py  base_server.py  client.py  exceptions.py  kafka_manager.py  kombu_manager.py  manager.py  message_history.py  middleware.py  msgpack_packet.py  namespace.py  packet.py  pubsub_manager.py  redis_manager.py  server.py  simple_client.py  tornado.py  (+1 more)
tests/: asyncio_web_server.py  test_asyncio_client.py  test_asyncio_manager.py  test_asyncio_namespace.py  test_asyncio_pubsub_manager.py  test_asyncio_redis_manager.py  test_asyncio_server.py  test_base_manager.py  test_client.py  test_middleware.py  test_namespace.py  test_packet.py  test_pubsub_manager.py  test_server.py  web_server.py
tests/async/: helpers.py  test_admin.py  test_asyncio_admin.py  test_client.py  test_manager.py  test_namespace.py  test_pubsub_manager.py  test_redis_manager.py  test_server.py  test_simple_client.py
tests/asyncio/: test_asyncio_client.py  test_asyncio_manager.py  test_asyncio_namespace.py  test_asyncio_pubsub_manager.py  test_asyncio_redis_manager.py  test_asyncio_server.py  test_asyncio_simple_client.py
tests/common/: test_admin.py  test_base_manager.py  test_client.py  test_manager.py  test_middleware.py  test_msgpack_packet.py  test_namespace.py  test_packet.py  test_pubsub_manager.py  test_redis_manager.py  test_server.py  test_simple_client.py
tests/performance/: README.md  binary_packet.py  json_packet.py  namespace_packet.py  run.sh  server_receive.py  server_send.py  server_send_broadcast.py  text_packet.py
(+102 files in other folders)
