[metadata]
name = python-socketio
version = 5.5.0
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Socket.IO server and client for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/python-socketio
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/python-socketio/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bidict >= 0.21.0
    python-engineio >= 4.3.0

[options.packages.find]
where = src

[options.extras_require]
client =
    requests >= 2.21.0
    websocket-client >= 0.54.0
asyncio_client =
    aiohttp >= 3.4
